# graphies

./: .gitignore  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
examples/: check.py  graph_to_metaselfies.py  graph_vocab.json  protein.json  protein_vocab.json  selfies copy.json  selfies.json  selfies.py  selfies_alphabet.json  selfies_vocab.json  smiles_to_smiles.py  test.py  vocab.json  workflow.json  workflow_vocab.json
examples/fasta/: fasta.json  fasta_vocab.json  roundtrip.py  vocab.py
examples/fasta_predict/: 1-train.py  2-infer.py  fasta.json
examples/fourcolor/: dataset.py  encode.py  fourcolor.py  vocab.py
examples/fourcolor_predict/: 1-train.py  2-infer.py  3-restart.py  fourcolor.csv
examples/selfies/: roundtrip.py  vocab.py
examples/selfies_predict/: 1-train.py  2-infer.py
samples/: qm9.smi
src/graphies/: __init__.py  __main__.py  decoder.py  encoder.py  grammar.py  graphies.py  instances.py  tokenizer.py  utils.py
src/graphies/predict/: __init__.py  dataset.py  inference.py  models.py  tokenizer.py  trainer.py
src/metaselfies/: __init__.py  __main__.py  decoder.py  dictionary.py  encoder.py  grammar.py  instances.py  main.py  metaselfies.py  tokenizer.py  utils.py
src/metaselfies/data/: selfies.json
src/metaselfies/selfies/: __init__.py  selfies.json
tests/: commandline_graph.txt  commandline_selfies.txt  test_cases.py  test_decode.py  test_encode.py  test_grammar.py  test_index.py  test_inference.py  test_roundtrip.py
tests/benchmarks/: roundtrip.py
tests/profile/: roundtrip.py
tests/samples/: qm9.txt
