[project]
name = "metaselfies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lukasmki", email = "lukasarus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "molify>=0.2.2",
    "partialsmiles>=2.0",
    "rdkit>=2025.9.3",
    "selfies>=2.2.0",
]

[project.scripts]
meta-selfies = "meta_selfies:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
