[project]
name = "graphies"
version = "0.1.0"
description = "tokenize any graph"
readme = "README.md"
authors = [
    { name = "lukasmki", email = "lukasarus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "molify>=0.2.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "rdkit>=2025.9.3",
    "rich>=14.3.2",
    "selfies>=2.2.0",
    "tqdm>=4.67.3",
]

[project.scripts]
graphies = "graphies.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "[%(levelname)s] %(name)s - %(message)s"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "ruff>=0.15.1",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.6.3",
]
